<resources>
    <string name="app_name">倾盖</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_main">倾盖Encounter</string>
    <string name="title_fragment_message">消息列表</string>
    <string name="title_fragment_encounter">倾盖Encounter</string>
    <string name="title_fragment_profile">个人中心</string>
    <string name="user_id">倾盖ID</string>
    <string name="user_name">昵称</string>
    <string name="password">密码</string>
    <string name="gender">性别</string>
    <string name="constellation">星座</string>
    <string name="script">签名</string>

    <!-- Strings related to login -->
    <string name="prompt_email">请输入倾盖ID</string>
    <string name="prompt_password">请输入密码</string>
    <string name="confirm_password">请确认密码</string>
    <string name="prompt_user_name">请输入昵称</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="action_next">下一步</string>
    <string name="action_start_test">开始测试</string>
    <string name="action_confirm">确定</string>
    <string name="action_cancel">取消</string>
    <string name="action_encounter">开启倾盖之旅</string>
    <string name="action_forget_password">忘记密码</string>
    <string name="error_invalid_user_id">倾盖ID不存在</string>
    <string name="error_invalid_password">密码至少4位</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_mismatching_password">两次密码不一致</string>
    <string name="error_field_required">输入不能为空，请检查</string>
    <string name="error_no_test_record">没有测试记录！点击开始测试</string>
    <string name="error_no_keyword">没有设置话题标签</string>
    <string name="notice_loading_data">数据加载中</string>
    <string name="notice_posting_data">数据提交中</string>
    <string name="notice_logging_in">登录中</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_profile">编辑个人资料</string>
    <string name="title_activity_user_detail">详细资料</string>
    <string name="title_activity_epq">EPQ测试</string>
    <string name="title_activity_constellation">选择星座</string>
    <string name="title_activity_edit_keyword">编辑话题标签</string>
    <string name="title_activity_appreciating_list">我欣赏的人</string>
    <string name="title_activity_fans_list">欣赏我的人</string>

    <string name="epq_introduction">艾森克人格问卷(简称EPQ)是英国伦敦大学心理系和精神病研究所艾森克教授编制的, 他搜集了大量数据，通过因素分析归纳提出决定人格的三个基本因素: 内外向性(E)、情绪性(N)和精神质(P), 人们在这三方面的不同倾向和不同表现程度, 便构成了不同的人格特征。</string>

    <string name="constellation01">白羊座</string>
    <string name="constellation02">金牛座</string>
    <string name="constellation03">双子座</string>
    <string name="constellation04">巨蟹座</string>
    <string name="constellation05">狮子座</string>
    <string name="constellation06">处女座</string>
    <string name="constellation07">天秤座</string>
    <string name="constellation08">天蝎座</string>
    <string name="constellation09">射手座</string>
    <string name="constellation10">摩羯座</string>
    <string name="constellation11">水瓶座</string>
    <string name="constellation12">双鱼座</string>
    <string name="constellation00">未知星座</string>
    <string name="tip_edit_keyword">请选择最喜欢的标签，可以多选或不选</string>
</resources>
