<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="40dp"
                android:background="@drawable/login_input_bg"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_userid" />

                <AutoCompleteTextView
                    android:id="@+id/tv_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/prompt_email"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/text_big" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="16dp"
                android:background="@drawable/login_input_bg"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_password" />

                <EditText
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/text_big" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="16dp"
                android:text="@string/action_forget_password"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_medium" />

            <Button
                android:id="@+id/sign_in_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="8dp"
                android:background="@drawable/sign_in_btn"
                android:text="@string/action_sign_in"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_big" />

            <Button
                android:id="@+id/sign_up_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginVertical="16dp"
                android:background="@drawable/sign_up_btn"
                android:text="@string/action_sign_up"
                android:textColor="@color/main_color_dark"
                android:textSize="@dimen/text_big" />

        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/login_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay_dark"
        android:visibility="gone" />
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
</FrameLayout>