<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterNameActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo" />



                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:gravity="center"
                    android:textSize="@dimen/text_big"
                    android:text="给自己起个名字吧"
                    android:textColor="@color/main_color_dark"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="16dp"
                android:background="@drawable/login_input_bg"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_password" />

                <EditText
                    android:id="@+id/tv_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/prompt_user_name"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/prompt_user_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/text_big" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_input_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="16dp"
                android:text=""
                android:textColor="@color/main_color_dark"
                android:textSize="@dimen/text_medium"/>

            <Button
                android:id="@+id/next_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="8dp"
                android:background="@drawable/sign_in_btn"
                android:text="@string/action_next"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_big" />

            <Button
                android:id="@+id/cancel_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingHorizontal="16sp"
                android:layout_height="40sp"
                android:layout_marginVertical="16dp"
                android:background="@null"
                android:text="@string/action_cancel"
                android:textColor="@color/main_color_dark"
                android:textSize="@dimen/text_big" />

        </LinearLayout>
    </ScrollView>



</FrameLayout>